--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_sign_in: ^4.5.1
   firebase_auth: ^0.16.1
   provider: ^4.1.2
+  flutter_datetime_picker: 1.3.8
 
 
   # The following adds the Cupertino Icons font to your application.
